<resources>
    <string name="app_name">Latihan Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_home">Hai Fragment!</string>
    <string name="to_cat">Ke Kategori</string>
    <string name="this_cat">Ini adalah Fragment Kategori</string>
    <string name="to_cat_lifestyle">Ke Kategori Lifestyle</string>
    <string name="cat_name">Lifestyle</string>
    <string name="cat_detail">Detail kategori</string>
    <string name="profile">Profil</string>
    <string name="show_dialog">Tampilkan Dialog</string>
    <string name="question">Lagu favorit anda?</string>
    <string name="ans_1">ExileLord - Soulless 5</string>
    <string name="ans_2">Puru - Snow White</string>
    <string name="ans_3">Hazy - Cosmos</string>
    <string name="ans_4">M83 - Outro</string>
    <string name="ans_5">Toto - Africa</string>
    <string name="close">Tutup</string>
    <string name="choose">Pilih</string>
    <string name="this_profile">Siapakah orang dibalik profil ini?</string>
</resources>
